added an its to about page

--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -8,7 +8,7 @@
 
     <p>Silver Chips Online is an independent student newspaper of Montgomery Blair High School
       (<a href="http://www.mbhs.edu">www.mbhs.edu</a>) in Silver Spring, Maryland.
-      Silver Chips Online is run entirely by students and works closely with print counterpart Silver Chips.
+      Silver Chips Online is run entirely by students and works closely with its print counterpart Silver Chips.
       Silver Chips Online, Silver Chips and individual staff members have won numerous awards,
       many of them at the national level. Student editors make all content decisions.
       Silver Chips Online is a forum for community expression. For more information on our writers and other staff,
