--- a/home/templates/home/includes/index-sm-sidebar.html
+++ b/home/templates/home/includes/index-sm-sidebar.html
@@ -1,16 +1,16 @@
 <ul class="social-media-sidebar d-none d-md-block">
     <li>
-        <a href="#">
+        <a target="_blank"  href="https://www.facebook.com/SilverChipsOnline/">
             <i class="fab fa-facebook-f"></i><span>Facebook</span>
         </a>
     </li>
     <li>
-        <a href="#">
+        <a target="_blank" href="https://twitter.com/mbhsSCO?lang=en">
             <i class="fab fa-twitter"></i><span>Twitter</span>
         </a>
     </li>
     <li>
-        <a href="#">
+        <a target="_blank" href="https://www.instagram.com/silverchipsonline/?hl=en">
             <i class="fab fa-instagram"></i><span>Instagram</span>
         </a>
     </li>
