change instagram link

--- a/home/templates/home/includes/index-sm-sidebar.html
+++ b/home/templates/home/includes/index-sm-sidebar.html
@@ -10,7 +10,7 @@
         </a>
     </li>
     <li>
-        <a target="_blank" href="https://www.instagram.com/silverchipsonline/?hl=en">
+        <a target="_blank" href="http://instagram.com/scophotostaff">
             <i class="fab fa-instagram"></i><span>Instagram</span>
         </a>
     </li>
