attempted navbar fix

--- a/home/static/home/styles/imports/_navbar-styles.scss
+++ b/home/static/home/styles/imports/_navbar-styles.scss
@@ -46,7 +46,7 @@
         height: auto;
         margin-bottom: 0.75rem; }
     .navbar .nav-link {
-        padding: 10px 15px;
+        padding: 10px .7vw;
         border-bottom: 2px solid gray; }
 }
 .scrolled {
@@ -56,7 +56,7 @@
         height: 0px;
         margin-bottom: 0; }
     .navbar { border-bottom: 2px solid gray; }
-    .navbar .nav-link { padding: 4px 15px; }
+    .navbar .nav-link { padding: 4px .7vw; }
 }
 
 //SEARCH BUTTON
