fix searchbar appearance

--- a/home/templates/home/includes/navbar.html
+++ b/home/templates/home/includes/navbar.html
@@ -29,7 +29,7 @@
           </li>
         {% endfor %}
         <li id="search" class="nav-item px-0">
-          <a type="button" class="nav-link" data-toggle="modal" data-target="#searchModal" style="font-size: 13px;">
+          <a class="nav-link" data-toggle="modal" data-target="#searchModal" style="font-size: 13px;">
             <i class="fa fa-search fa-lg py-1"></i>
           </a>
         </li>
