--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -138,21 +138,37 @@
         {% endif %}
 
         <div class="card latest-stories">
-          <div class="card-header mb-3">
-            <h4 class="card-title mb-0">Latest Content</h4>
-          </div>
-
-          <ul class="list-group list-group-flush">
-            {% for content_item in top_content|slice:":8" %}
-              <li class="list-group-item {% if not forloop.last %}mb-1{% else %}mb-3{% endif %} ml-3">
-                <div class="row">
-                  <div class="col-2"><strong>{{ forloop.counter }}</strong></div>
-                  <div class="col-10"><a href="{{ content_item.get_absolute_url }}" class="solid-link">{{ content_item.title|safe }}</a></div>
-                </div>
-              </li>
-            {% endfor %}
-          </ul>
+          {% if content.linked.count > 0 %}
+            <div class="card-header mb-3">
+              <h4 class="card-title mb-0">Related Content</h4>
+            </div>
+            <ul class="list-group list-group-flush">
+              {% for content_item in content.linked.all %}
+                <li class="list-group-item {% if not forloop.last %}mb-1{% else %}mb-3{% endif %} ml-3">
+                  <div class="row">
+                    <div class="col-lg-2 text-uppercase"><strong>{{ content_item.type }}:</strong></div>
+                    <div class="col"><a href="{{ content_item.get_absolute_url }}" class="solid-link">{{ content_item.title|safe }}</a></div>
+                  </div>
+                </li>
+              {% endfor %}
+            </ul>
+          {% else %}
+            <div class="card-header mb-3">
+              <h4 class="card-title mb-0">Latest Content</h4>
+            </div>
+            <ul class="list-group list-group-flush">
+              {% for content_item in top_content|slice:":8" %}
+                <li class="list-group-item {% if not forloop.last %}mb-1{% else %}mb-3{% endif %} ml-3">
+                  <div class="row">
+                    <div class="col-2"><strong>{{ forloop.counter }}</strong></div>
+                    <div class="col-10"><a href="{{ content_item.get_absolute_url }}" class="solid-link">{{ content_item.title|safe }}</a></div>
+                  </div>
+                </li>
+              {% endfor %}
+            </ul>
+          {% endif %}
         </div>
+
       </div>
     </div>
   </div>
