--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,6 +8,7 @@
   {% include "home/includes/index-sm-sidebar.html" %}
 
   <div class="medium-container">
+      <div class="breaking-banner"><a href="content/breaking-three-coronavirus-cases-confirmed-in-montgomery-county-32744/">BREAKING: Three Coronavirus Cases Confirmed in Montgomery County</a></div>
       <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header">Latest</a></h1>
       <div class="card-columns">
         {% for content in top_content|slice:":6" %}
