--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,6 +9,9 @@
 
   <div class="medium-container">
       <div class="breaking-banner"><a href="content/breaking-three-coronavirus-cases-confirmed-in-montgomery-county-32744/">BREAKING: Three Coronavirus Cases Confirmed in Montgomery County</a></div>
+      {% if breaking %}
+        <div class="breaking-banner"><a href="{{ breaking.0.content.get_absolute_url }}">{{ breaking.0.content.title }}</a></div>
+      {% endif %}
       <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header">Latest</a></h1>
       <div class="card-columns">
         {% for content in top_content|slice:":6" %}
