fix broken link

--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -12,7 +12,7 @@
       Silver Chips Online, Silver Chips and individual staff members have won numerous awards,
       many of them at the national level. Student editors make all content decisions.
       Silver Chips Online is a forum for community expression. For more information on our writers and other staff,
-      please visit our <a href="http://silverchips.mbhs.edu/staff">staff page</a>.
+      please visit our <a href="http://silverchips.mbhs.edu/about/staff">staff page</a>.
     </p>
 
     <h3>Philosophy</h3>
