Video thumbnails and youtube channel.

--- a/home/templates/home/includes/index-sm-sidebar.html
+++ b/home/templates/home/includes/index-sm-sidebar.html
@@ -14,4 +14,9 @@
             <i class="fab fa-instagram"></i><span>Instagram</span>
         </a>
     </li>
+    <li>
+        <a target="_blank" href="https://www.youtube.com/channel/UChQKJ8Jyaw6tgZUWha6SFSg">
+            <i class="fab fa-youtube"></i><span>Youtube</span>
+        </a>
+    </li>
 </ul>
