More URL agnosticism and obfuscated emails.

--- a/home/templates/home/about/staff.html
+++ b/home/templates/home/about/staff.html
@@ -13,7 +13,7 @@
       {% for user in active_eic %}
         <li>
           <a href="{% url 'home:view_profile' user.profile.pk %}"> {{ user.get_full_name }}</a>, {{ user.profile.position }}
-          {% if user.email %}&mdash; <a href="mailto:{{ user.email }}">{{ user.email }}</a>{% endif %}
+          {% if user.email %}&mdash; {% obfuscated_email user.email%}{% endif %}
         </li>
       {% endfor %}
     </ul>
@@ -22,7 +22,7 @@
       {% for user in active_editor %}
         <li>
           <a href="{% url 'home:view_profile' user.profile.pk %}"> {{ user.get_full_name }}</a>, {{ user.profile.position }}
-          {% if user.email %}&mdash; <a href="mailto:{{ user.email }}">{{ user.email }}</a>{% endif %}
+          {% if user.email %}&mdash; {% obfuscated_email user.email%}{% endif %}
         </li>
       {% endfor %}
     </ul>
@@ -31,7 +31,7 @@
       {% for user in active_other %}
         <li>
           <a href="{% url 'home:view_profile' user.profile.pk %}"> {{ user.get_full_name }}</a>, {{ user.profile.position }}
-          {% if user.email %}&mdash; <a href="mailto:{{ user.email }}">{{ user.email }}</a>{% endif %}
+          {% if user.email %}&mdash; {% obfuscated_email user.email%}{% endif %}
         </li>
       {% endfor %}
     </ul>
