--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -13,7 +13,7 @@
       <div class="col-md-3">
         {% if user.profile.avatar %}
           <div class="image-cropper" style="width: 200px; height: 200px; position: relative; overflow: hidden; border-radius: 50%;">
-            <img class="profile-pic" src="{{ user.profile.avatar.url }}" style="display: inline; margin: 0 auto; margin-left: -25%; height: 100%; width: auto;">
+            <img class="profile-pic" src="{{ user.profile.avatar.url }}" style="position: absolute; left: 50%; top: 50%; height: 100%; width: auto; transform: translate(-50%, -50%);">
           </div>
           <br/><br/>
         {% endif %}
