remove gap between dropdown menu and menu item
so it doesn't disappear if you move your mouse down slowly

--- a/home/static/home/styles/imports/_navbar-styles.scss
+++ b/home/static/home/styles/imports/_navbar-styles.scss
@@ -68,6 +68,10 @@
 //    display: none;
 //}
 
+.nav-item.dropdown > .dropdown-menu {
+    margin-top: 0;   
+}
+
 @media (min-width: 992px) {
     .nav-item:hover > .dropdown-menu {
         display: block;
